--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,7 @@ test:
 
 production:
   <<: *default
+  adapter: postgresql
   database: google-notes-prod
   username: brainx
   password: brainx321
