--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
   "name": "google_notes_demo",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.2",
+    "@rails/actiontext": "^6.0.0",
+    "@rails/activestorage": "^6.0.0",
+    "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "^4.0.7",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
+    "popper.js": "^1.15.0",
+    "trix": "^1.0.0",
+    "turbolinks": "^5.2.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.8.0"
+  }
 }
